--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input type="search" id="search" placeholder="Type Here to search superheroes..." autocomplete="off" />
          </div>
         <div class="right">
-            <a href="/super-hero-hunter/favourites.html" class="link">favourites</a>
+            <a href="favourites.html" class="link">favourites</a>
         </div>
     
     </nav>  
