--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="left">
-            <a href="/super-hero-hunter/" class="link">Home</a>
+            <a href="index.html" class="link">Home</a>
         </div>
         <div class="search-container">
             <img
